--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Green Panda Field Assistant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="main.js"></script></head>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" href="favicon.ico"><script defer src="main.js"></script></head>
   <body>
   </body>
 </html>
